@startuml Vocabulary
    title Vocabulary
    
    class TicTacToe
    class Player
    class Turn
    class Grid
    class Square
    class Token
    enum Color{
        X
        O
    }

    TicTacToe *--> "2" Player
    TicTacToe *--> Turn
    TicTacToe *--> Grid

    Turn --> "2" Player : exchanger

    Player *--> "3" Token
    Player --> Color
    Player -right-> Grid
    Player ..> Goal : has

    Token *--> Color

    Goal <|-- Horizontal
    Goal <|-- Vertical
    Goal <|-- MainDiagonal
    Goal <|-- InversalDiagonal
    Goal ..> "3" Token : need
    Goal ..> Action : makes

    Action "only" <|-- "3" Put
    Action <|-- Move
    Action ..> Square : target
    Action ..> "1" Token : uses

    Move "need" ..> "origin" Square 

    Grid *--> "3x3" Square

    Square *--> Coordinate
    Square o--> "1" Token
@enduml

@startuml InitialState
    title  Initial State
    title Initial State
    
    together {
        object ":Square" as Square11
        object ":Square" as Square12
        object ":Square" as Square13    

        object ":Square" as Square21
        object ":Square" as Square22
        object ":Square" as Square23    

        object ":Square" as Square31
        object ":Square" as Square32
        object ":Square" as Square33    
    }   

    object ":Coordinate" as Coordinate11 {
        row = 1
        column = 1
    }
    object ":Coordinate" as Coordinate12 {
        row = 1
        column = 2
    }
    object ":Coordinate" as Coordinate13 {
        row = 1
        column = 3
    }   

    object ":Coordinate" as Coordinate21 {
        row = 2
        column = 1
    }
    object ":Coordinate" as Coordinate22 {
        row = 2
        column = 2
    }
    object ":Coordinate" as Coordinate23 {
        row = 2
        column = 3
    }   

    object ":Coordinate" as Coordinate31 {
        row = 3
        column = 1
    }
    object ":Coordinate" as Coordinate32 {
        row = 3
        column = 2
    }
    object ":Coordinate" as Coordinate33 {
        row = 3
        column = 3
    }   

    object ":TicTacToe" as TicTacToe
    object ":Board" as Board    

    TicTacToe -down-> Board    

    Board --> Square11
    Board --> Square12
    Board --> Square13
    Board --> Square21
    Board --> Square22
    Board --> Square23
    Board --> Square31
    Board --> Square32
    Board --> Square33 

    Square11 -down-> Coordinate11
    Square12 -down-> Coordinate12
    Square13 -down-> Coordinate13
    Square21 -down-> Coordinate21
    Square22 -down-> Coordinate22
    Square23 -down-> Coordinate23
    Square31 -down-> Coordinate31
    Square32 -down-> Coordinate32
    Square33 -down-> Coordinate33  

    Square11 -[hidden]right-> Square12
    Square12 -[hidden]right-> Square13

    Square21 -[hidden]right-> Square22
    Square22 -[hidden]right-> Square23

    Square31 -[hidden]right-> Square32
    Square32 -[hidden]right-> Square33  

    Square11 -[hidden]down-> Square21
    Square12 -[hidden]down-> Square22
    Square13 -[hidden]down-> Square23   

    Square21 -[hidden]down-> Square31
    Square22 -[hidden]down-> Square32
    Square23 -[hidden]down-> Square33
@enduml

@startuml FinalState
    title Final State
    title Final State

    together {
        object ":Square" as Square11
        object ":Square" as Square12
        object ":Square" as Square13

        object ":Square" as Square21
        object ":Square" as Square22
        object ":Square" as Square23

        object ":Square" as Square31
        object ":Square" as Square32
        object ":Square" as Square33
    }

    object ":Coordinate" as Coordinate11 {
        row = 1
        colunm = 1
    }
    object ":Coordinate" as Coordinate12 {
        row = 1
        colunm = 2
    }
    object ":Coordinate" as Coordinate13 {
        row = 1
        colunm = 3
    }

    
    object ":Coordinate" as Coordinate21 {
        row = 2
        colunm = 1
    }
    object ":Coordinate" as Coordinate22 {
        row = 2
        colunm = 2
    }
    object ":Coordinate" as Coordinate23 {
        row = 2
        colunm = 3
    }

    
    object ":Coordinate" as Coordinate31 {
        row = 3
        colunm = 1
    }
    object ":Coordinate" as Coordinate32 {
        row = 3
        colunm = 2
    }
    object ":Coordinate" as Coordinate33 {
        row = 3
        colunm = 3
    }

    object ":TicTacToe" as TicTacToe
    object ":Board" as Board

    TicTacToe --> Board
    Board -down-> Square11
    Board -down-> Square12
    Board -down-> Square13

    Board -down-> Square21
    Board -down-> Square22
    Board -down-> Square23

    Board -down-> Square31
    Board -down-> Square32
    Board -down-> Square33

    Square11 -down-> Coordinate11
    Square12 -down-> Coordinate12
    Square13 -down-> Coordinate13

    Square21 -down-> Coordinate21
    Square22 -down-> Coordinate22
    Square23 -down-> Coordinate23

    Square31 -down-> Coordinate31
    Square32 -down-> Coordinate32
    Square33 -down-> Coordinate33

    Square11 -[hidden]right-> Square12
    Square12 -[hidden]right-> Square13

    Square21 -[hidden]right-> Square22
    Square22 -[hidden]right-> Square23
    
    Square31 -[hidden]right-> Square32
    Square32 -[hidden]right-> Square33

    Square11 -[hidden]down-> Square21
    Square21 -[hidden]down-> Square31   

    Square12 -[hidden]down-> Square22
    Square22 -[hidden]down-> Square32


    object ":X" as X
    object "O" As O

    object ":TokenX" as TokenX1
    object ":TokenX" as TokenX2
    object ":TokenX" as TokenX3

    object ":TokenO" as TokenO1
    object ":TokenO" as TokenO2
    object ":TokenO" as TokenO3

    TokenX1 --> X
    TokenX2 --> X
    TokenX3 --> X

    TokenO1 --> O
    TokenO2 --> O
    TokenO3 --> O

    Square11 -down-> TokenX1
    Square12 -down-> TokenX2
    Square33 -down-> TokenX3

    Square31 -down-> TokenO1
    Square22 -down-> TokenO2
    Square13 -down-> TokenO3
@enduml

@startuml Functionalities
    title Functionalities

    state A as " "
    state B as " "
    state C as " "
    state D as " "
    state E as " "
    state F as " "
    state G as " "
    state if1 <<choice>>
    state if2 <<choice>>
    state if3 <<choice>>

    [*] --> A
    A --> B : put 
    B -->if1
        if1 --> A : next turn
    if1 --> C : [token on grib == 3]
    C --> if2
        if2 --> [*] : [is tic-tac-toe]
    if2 --> D : next turn
    D --> E : put
    E --> if3
        if3 --> [*] : [is tic-tac-toe]
    if3 --> F : next turn
    F --> G : Move
    G --> if3


@enduml

@startuml Activities
    title Actjvjtjes
@enduml
